data-system/services/appwrite/appwrite-schedule.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appwrite-schedule
  labels:
    app: appwrite
    component: schedule
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  selector:
    matchLabels:
      app: appwrite
      component: schedule
  template:
    metadata:
      labels:
        app: appwrite
        component: schedule
    spec:
      containers:
      - name: schedule
        image: appwrite/appwrite:1.2.1
        imagePullPolicy: IfNotPresent
        command:
        - schedule
