data-system/services/appwrite/appwrite-worker-databases.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appwrite-worker-databases
  labels:
    app: appwrite
    component: worker-databases
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  selector:
    matchLabels:
      app: appwrite
      component: worker-databases
  template:
    metadata:
      labels:
        app: appwrite
        component: worker-databases
    spec:
      containers:
      - name: worker-databases
        image: appwrite/appwrite:1.2.1
        imagePullPolicy: IfNotPresent
        command:
        - worker-databases
