data-system/services/appwrite/appwrite.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appwrite
spec:
  rules:
  - host: appwrite.example.com
    http:
      paths:
      - backend:
          service:
            name: appwrite-realtime
            port:
              name: api
        pathType: Prefix
        path: /v1/realtime
      - backend:
          service:
            name: appwrite-server
            port:
              name: web
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - '*.example.com'
    secretName: example-com-cert
